<resources>
    <string name="app_name">Omdan</string>

    <!-- Splash -->
    <string name="app_version_format" translatable="false">Version v %s (%d) </string>

    <!-- Intro Activity -->
    <string name="skip">Skip</string>
    <string name="first_intro_title">First Intro Title</string>
    <string name="second_intro_title">Second Intro Title</string>
    <string name="third_intro_title">Third Intro Title</string>
    <string name="fourth_intro_title">Fourth Intro Title</string>
    <string name="first_intro_message">First Intro Message</string>
    <string name="second_intro_message">Second Intro Message</string>
    <string name="third_intro_message">Third Intro Message</string>
    <string name="fourth_intro_message">Fourth Intro Message</string>

    <!-- Action Bar -->
    <string name="record_id_title">Record Id</string>

    <!-- Drawer Options -->
    <string name="find_record">Find Record</string>
    <string name="show_record">Show Record</string>
    <string name="new_record">New Record</string>
    <string name="show_all">Show All Records</string>
    <string name="open_galery">Open Image Galery</string>

    <!-- Login Dialog -->
    <string name="login_msg">Login</string>
    <string name="name_et_hint">Enter your user name</string>
    <string name="password_et_hint">Enter your password</string>
    <string name="login_failed">Login failed. Please try again.</string>

    <!-- New Record -->
    <string name="data_1_et_hint">Data 1</string>
    <string name="data_2_et_hint">Data 2</string>
    <string name="data_3_et_hint">Data 3</string>
    <string name="data_4_et_hint">Data 4</string>
    <string name="data_5_et_hint">Data 5</string>
    <string name="data_6_et_hint">Data 6</string>
    <string name="data_7_et_hint">Data 7</string>
    <string name="data_8_et_hint">Data 8</string>
    <string name="data_9_et_hint">Data 9</string>
    <string name="data_10_et_hint">Data 10</string>
    <string name="data_11_et_hint">Data 11</string>
    <string name="data_12_et_hint">Data 12</string>
    <string name="data_13_et_hint">Data 13</string>
    <string name="data_14_et_hint">Data 14</string>
    <string name="data_15_et_hint">Data 15</string>

    <!-- Record Created successfully message -->
    <string name="record_created_successfully_message">Record %s created successfully</string>

    <!-- Show All Records fragment -->
    <string name="select_record_from_list">Select record from list</string>
    <string name="select_record_sort_by">Select record from list</string>

    <!-- Create new record dialog -->
    <string name="new_record_id_title">Record Id %s</string>
    <string name="create_new_record_msg">Please confirm record Id %s</string>

    <!-- Find record fragment -->
    <string name="missing_data">You should fill at list one field</string>
    <string name="find_record_by_data">Find Record</string>
    <string name="file_number_title">File Number</string>
    <string name="file_not_found">File Not Found!</string>
    <string name="creation_date_start_title">Creation Date Start</string>
    <string name="creation_date_end_title">Creation Date End</string>

    <!-- Find results fragment -->
    <string name="choose_record_from_list">Choose Record Form List</string>

    <!-- Show record fragment -->
    <string name="insured_list_name_title">Insured List Name</string>
    <string name="record_date_title">Date</string>
    <string name="record_time_title">Time</string>
    <string name="customer_name_title">Customer Name</string>
    <string name="employee_name_title">Employee Name</string>
    <string name="suit_name_title">Suit Name</string>
    <string name="file_status_name_title">File Status</string>

    <!-- Show camera dialog -->
    <string name="record_id_et_hint">File Name</string>

    <!-- MainScreen -->
    <string name="galery">Images Gallery</string>
    <string name="device_archive">Images Archive</string>
    <string name="all_records">All Records</string>
    <string name="create_new_record">New Record</string>

    <!-- Open Galery -->
    <string name="galleries">Galleries</string>
    <string name="empty_archive_msg">Your image archive is empty</string>
    <string name="directory_contains_no_images">The selected record contains no images</string>

    <!-- Camera Activity -->
    <string name="record_id">Record Id</string>
    <string name="loading">Loading</string>
    <string name="root">Root Directory</string>

    <!-- Floating layout -->
    <string name="camera">Camera</string>
    <string name="record_images">Images Gallery</string>
    <string name="archive_images">Archive Images</string>
    <string name="show_docs">Show Docs</string>
    <string name="open_images">Open Images</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>

    <!-- Image Gallery Strings -->
    <string name="selected_files">%d files selected</string>
    <string name="select_all_title">Select All</string>
    <string name="file_upload_problems">Problems has been found while uploading file</string>
    <string name="image_uploading_failed">Image uploading failed</string>

    <!-- Delete Confirmation Dialog -->
    <string name="delete_dialog_title">%d files selected for delete. Do you want to proceed?</string>

    <!-- Save Confirmation Dialog -->
    <string name="save_to_server_dialog_title">%d files selected for uploading to server. Do you want to proceed?</string>

    <!-- App Exit Dialog -->
    <string name="exit_title">Exit</string>
    <string name="exit_message">You are about to exit the application. Do you want to continue with exit?</string>

    <!-- Sever connection Dialog -->
    <string name="connection_msg">Enter Server\'s Prop</string>
    <string name="ip_et_hint">Ip Address</string>
    <string name="port_et_hint">Port</string>
    <string name="missing_data_all">All fields are required</string>

    <!-- Login Failed Dialog -->
    <string name="login_failed_title">Log in Failed! \nPlease try again.</string>
    <string name="ok">Ok</string>

    <!-- Loading Dialog -->
    <string name="uploading_images">Uploading the selected images</string>
    <string name="abort">Abort</string>

    <!-- Uploaded Images Dialog -->
    <string name="dialog_uploaded_images_title">%d Files uploded</string>

    <!-- Images List Request Dialog -->
    <string name="images_list_request_title">Download Images List</string>
    <string name="images_list_request_message">This file may contains images stored on server. \nDo you interested to get the images list?</string>
    <string name="directory_not_found">Directory Not Found</string>

    <!-- Images List Dialog -->
    <string name="images_list_title">Images List</string>
    <string name="close_images_list">Close</string>

</resources>
