<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/tool_bar"
                layout="@layout/toolbar" />

        </LinearLayout>

        <!-- https://stackoverflow.com/questions/22518018/android-how-to-create-radiobuttons-like-a-row-of-buttons -->
        <RadioGroup
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/openArchiveButton"
                style="@style/horizontal_menu_buttons"
                android:text="@string/device_archive" />

            <RadioButton
                android:id="@+id/openGaleryButton"
                style="@style/horizontal_menu_buttons"
                android:text="@string/galery" />

            <RadioButton
                android:id="@+id/allRecordsButton"
                style="@style/horizontal_menu_buttons"
                android:checked="true"
                android:text="@string/all_records" />

            <RadioButton
                android:id="@+id/newRecordButton"
                style="@style/horizontal_menu_buttons"
                android:text="@string/create_new_record" />

        </RadioGroup>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/left_drawer"
        style="@style/ListView"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />
</android.support.v4.widget.DrawerLayout>